feat: add repository endpoint
