# internal/api/impl.go
@@ -24,6 +24,25 @@ func NewServer(storageHandler storage.Storage) Server {
 	}
 }
 
+func (s Server) GetRepositories(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	_ = json.NewEncoder(w).Encode(Error{
+		Code: new(int(http.StatusOK)),
+		Message: new(string("")),
+	})
+	return
+}
+
+func (s Server) AddRepository(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	_ = json.NewEncoder(w).Encode(Error{
+		Code: new(int(http.StatusCreated)),
+		Message: new(string("Repository created")),
+	})
+	return
+}
+
 func (s Server) GetCharts(w http.ResponseWriter, r *http.Request) {
 	data, err := s.storageHandler.Read("", "")
 	if err != nil {
